Refactor button label and enhance toast notification styles. Updated 'Danger Zone' button to 'Emergency Stop' in index.html. Improved toast notification styles in style.css with animations and fixed positioning. Modified showMessage function in app.js to support new toast notifications and ensure valid data before saving configurations.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="danger_zone">
 
-                <button class="danger_button">Danger Zone</button>
+                <button class="danger_button">Emergency Stop</button>
             </div>
 
 
