--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                     <span class="status-label">Status:</span>
                     <span id="connectionStatus" class="status-value disconnected">Disconnected</span>
                 </div>
-                <span class="tax_form_the_socket">tax form the socket</span>
+                <div class="tax_form_the_socket">tax form the socket</div>
+                
             </section>
 
             <div class="danger_zone">
@@ -148,6 +149,7 @@
         </main>
     </div>
 
+    <script src="js/socket.js"></script>
     <script src="js/app.js"></script>
 </body>
 
