--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forthtech - Solar Cleaner Brush Control</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -149,8 +149,7 @@
         </main>
     </div>
 
-    <script src="js/socket.js"></script>
-    <script src="js/app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
